feat: Add novo box em habilidades

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 me tiram da zona de conforto. Minha experiência com programação se iniciou na faculdade e desde então,
                 tenho me dedicado a aprender
                 e aprimorar minhas habilidades em lógica de programação, linguagem e seus frameworks. O estudo é a base
-                para o sucesso e estou no
+                para o sucesso.
         </div>
     </section>
 
@@ -73,24 +73,24 @@
                 <div class="linguas">
                     <article>
                         <p>Python</p>
-                        <span>Intermediário</span>
                     </article>
-
                     <article>
                         <p>Django</p>
-                        <span>Basico</span>
                     </article>
                     <article>
                         <p>Flask</p>
-                        <span>Intermediário</span>
                     </article>
                     <article>
-                        <p>Docker</p>
-                        <span>Básico</span>
+                        <p>NodeJs</p>
                     </article>
                     <article>
-                        <p>Git</p>
-                        <span>Intermediário</span>
+                        <p>MySQL</p>
+                    </article>
+                    <article>
+                        <p>SQLite</p>
+                    </article>
+                    <article>
+                        <p>C# .NET Framework</p>
                     </article>
                 </div>
             </div>
@@ -101,28 +101,42 @@
                 <div class="linguas">
                     <article>
                         <p>HTML5</p>
-                        <span>Intermediário</span>
                     </article>
                     <article>
                         <p>CSS</p>
-                        <span>Intermediário</span>
                     </article>
-
+                    <article>
+                        <p>JavaScript</p>
+                    </article>
                     <article>
                         <p>Tailwind</p>
-                        <span>Básico</span>
                     </article>
                     <article>
                         <p>BootStrap</p>
-                        <span>Intermediário</span>
                     </article>
                     <article>
                         <p>SCSS</p>
-                        <span>Intermediário</span>
                     </article>
                     <article>
                         <p>Angular</p>
-                        <span>Basico</span>
+                    </article>
+                </div>
+            </div>
+            <div class="services-box">
+                <i class="fa-solid fa-robot"></i>
+                <h3>Ferramentas</h3>
+                <div class="linguas">
+                    <article>
+                        <p>Docker</p>
+                    </article>
+                    <article>
+                        <p>Git & Github</p>
+                    </article>
+                    <article>
+                        <p>VSCode Studio</p>
+                    </article>
+                    <article>
+                        <p>Postman</p>
                     </article>
                 </div>
             </div>
@@ -132,11 +146,9 @@
                 <div class="linguas">
                     <article>
                         <p>Flutter</p>
-                        <span>Intermediário</span>
                     </article>
                     <article>
                         <p>Dart</p>
-                        <span>Intermediário</span>
                     </article>
                 </div>
             </div>
@@ -166,7 +178,8 @@
                 <div class="portfolio-layer">
                     <h4>Coffe Dev</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://coffedev-up.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://coffedev-up.netlify.app/" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
@@ -177,7 +190,8 @@
                 <div class="portfolio-layer">
                     <h4>Api Weather</h4>
                     <p>Clique on ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/API_weather" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://github.com/Maike2961/API_weather" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
@@ -189,7 +203,8 @@
                 <div class="portfolio-layer">
                     <h4>Api Imagens</h4>
                     <p>CLique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/Api_Photos_Galery" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://github.com/Maike2961/Api_Photos_Galery" target="_blank"
+                        rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
@@ -205,7 +220,8 @@
                 <div class="portfolio-layer">
                     <h4>Pequeno Chat com Gemini</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/Python_Chat_IA" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://github.com/Maike2961/Python_Chat_IA" target="_blank" rel="noopener noreferrer"><i
+                            class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
@@ -216,7 +232,8 @@
                 <div class="portfolio-layer">
                     <h4>Automacao e envio de Email</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/FundoImobiliario_Email_Automatico" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://github.com/Maike2961/FundoImobiliario_Email_Automatico" target="_blank"
+                        rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
 
@@ -228,7 +245,8 @@
                 <div class="portfolio-layer">
                     <h4>Lista de Musicas com Angular</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/Angular_MusicsList" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                    <a href="https://github.com/Maike2961/Angular_MusicsList" target="_blank"
+                        rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
         </div>
