docs: Atualização no texto de introdução

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h3>Olá, sou</h3>
             <h1><span>M</span>ayki <span>S</span>ilva</h1>
             <h3>Sou <span class="text-typed"></span></h3>
-            <p>Bem-vindo ao meu portfólio. Sou um aspirante a desenvolvedor apaixonado por tecnologia e programação.
+            <p>Bem-vindo ao meu portfólio.
                 Aqui, você encontrará alguns
                 projetos e experiências que demonstram minha jornada e habilidades no mundo do desenvolvimento de
                 software.
@@ -54,13 +54,12 @@
         </div>
         <div class="about-content">
             <h2 class="heading">Sobre <span>Mim</span></h2>
-            <p>Meu nome é Mayki Pereira da Silva, tenho 24 anos, nasci em São Paulo, residente em São Paulo Capital. Sou
-                um entusiasta de tecnologia com um forte interesse em desenvolvimento de software, soluções inovadoras e
-                desafios que
-                me tiram da zona de conforto. Minha experiência com programação se iniciou na faculdade e desde então,
-                tenho me dedicado a aprender
-                e aprimorar minhas habilidades em lógica de programação, linguagem e seus frameworks. O estudo é a base
-                para o sucesso.
+            <p>Meu nome é Mayki Pereira da Silva, tenho 24 anos e sou natural de São Paulo, onde resido atualmente. Sou
+                um entusiasta da tecnologia, com foco em desenvolvimento de software e soluções inovadoras. Minha
+                jornada na programação começou na faculdade e, desde então, venho aprimorando constantemente minhas
+                habilidades em lógica de programação, linguagens e frameworks. Com uma mentalidade voltada para a
+                resolução de problemas e a busca por eficiência, estou sempre em busca de novos desafios que me
+                impulsionem a sair da zona de conforto.
         </div>
     </section>
 
