feat: Atualizado as habilidades

--- a/index.html
+++ b/index.html
@@ -83,13 +83,10 @@
                         <p>NodeJs</p>
                     </article>
                     <article>
-                        <p>MySQL</p>
+                        <p>Java</p>
                     </article>
                     <article>
-                        <p>SQLite</p>
-                    </article>
-                    <article>
-                        <p>C# .NET Framework</p>
+                        <p>SpringBoot</p>
                     </article>
                 </div>
             </div>
@@ -141,13 +138,13 @@
             </div>
             <div class="services-box">
                 <i class="fa-solid fa-robot"></i>
-                <h3>Desenvolvimento Mobile</h3>
+                <h3>Banco de Dados</h3>
                 <div class="linguas">
                     <article>
-                        <p>Flutter</p>
+                        <p>MySQL</p>
                     </article>
                     <article>
-                        <p>Dart</p>
+                        <p>PostgreSQL</p>
                     </article>
                 </div>
             </div>
