--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <p>JavaScript</p>
                     </article>
                     <article>
-                        <p>Tailwind</p>
+                        <p>TailwindCSS</p>
                     </article>
                     <article>
                         <p>BootStrap</p>
@@ -132,8 +132,12 @@
                         <p>Git & Github</p>
                     </article>
                     <article>
-                        <p>VSCode Studio</p>
+                        <p>VS Code</p>
                     </article>
+                    <article>
+                        <p>VS Community</p>
+                    </article>
+                    
                     <article>
                         <p>Postman</p>
                     </article>
@@ -251,22 +255,6 @@
         </div>
     </section>
 
-    <!-- <section class="contact" id="contact">
-        <h2 class="heading">Meu <span>Contato</span></h2>
-        <form action="">
-            <div class="input-box">
-                <input type="text" name="" placeholder="Nome Completo" id="">
-                <input type="text" name="" placeholder="Email" id="">
-            </div>
-
-            <div class="input-box">
-                <input type="text" placeholder="Numero de celular">
-                <input type="text" placeholder="Email Subject">
-            </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Sua Messagem"></textarea>
-            <input type="submit" value="Enviar" class="btn">
-        </form>
-    </section> -->
 
     <footer class="footer">
         <div class="footer-text">
