docs: add novo cv

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="https://github.com/Maike2961" target="_blank" rel="noopener noreferrer"><i
                         class="fa-brands fa-github"></i></a>
             </div>
-            <a href="./assests/cv_mayki.docx" class="btn" target="_blank" rel="noopener noreferrer" download>Download
+            <a href="./assests/cv-mayki.odt" class="btn" target="_blank" rel="noopener noreferrer" download>Download
                 CV</a>
         </div>
         <div class="home-img">
