feat: novo campo de projetos

--- a/index.html
+++ b/index.html
@@ -131,9 +131,6 @@
                     <article>
                         <p>VS Code</p>
                     </article>
-                    <article>
-                        <p>VS Community</p>
-                    </article>
                     
                     <article>
                         <p>Postman</p>
@@ -241,6 +238,19 @@
                     <h4>Lista de Musicas com Angular</h4>
                     <p>Clique no ícone abaixo</p>
                     <a href="https://github.com/Maike2961/Angular_MusicsList" target="_blank"
+                        rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <video autoplay muted loop>
+                    <source src="./assests/11-49-27.mp4">
+                </video>
+
+                <div class="portfolio-layer">
+                    <h4>Controle Financeiro</h4>
+                    <p>Clique no ícone abaixo</p>
+                    <a href="https://github.com/Maike2961/ControleFinanceiroAngular" target="_blank"
                         rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
