--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#" class="active">Home</a>
             <a href="#about">Sobre</a>
             <a href="#services">Habilidades</a>
-            <a href="#portfolio">Portfolio</a>
+            <a href="#portfolio">Projetos</a>
         </nav>
     </header>
     <section class="home" id="home">
@@ -34,8 +34,6 @@
                 software.
             </p>
             <div class="social-media">
-                <a href="https://instagram.com/mayki_costa_silva" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/maykipereiradasilva" target="_blank" rel="noopener noreferrer"><i
                         class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/Maike2961" target="_blank" rel="noopener noreferrer"><i
@@ -131,7 +129,7 @@
                     <article>
                         <p>VS Code</p>
                     </article>
-                    
+
                     <article>
                         <p>Postman</p>
                     </article>
@@ -153,7 +151,7 @@
     </section>
 
     <section class="portfolio" id="portfolio">
-        <h2 class="heading">Ultimos <span>Projetos</span></h2>
+        <h2 class="heading"><span>Projetos </span>Feitos</h2>
 
         <div class="portfolio-container">
             <div class="portfolio-box">
@@ -210,7 +208,7 @@
                     <source src="./assests/20240730122540.mp4">
                 </video>
                 <div class="portfolio-layer">
-                    <h4>Pequeno Chat com Gemini</h4>
+                    <h4>Assistente pessoal com Gemini</h4>
                     <p>Clique no ícone abaixo</p>
                     <a href="https://github.com/Maike2961/Python_Chat_IA" target="_blank" rel="noopener noreferrer"><i
                             class="fa-regular fa-share-from-square"></i></a>
@@ -222,7 +220,7 @@
                     <source src="./assests/20240730153315.mp4">
                 </video>
                 <div class="portfolio-layer">
-                    <h4>Automacao e envio de Email</h4>
+                    <h4>Automação e envio de e-mail</h4>
                     <p>Clique no ícone abaixo</p>
                     <a href="https://github.com/Maike2961/FundoImobiliario_Email_Automatico" target="_blank"
                         rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
@@ -235,7 +233,7 @@
                 </video>
 
                 <div class="portfolio-layer">
-                    <h4>Lista de Musicas com Angular</h4>
+                    <h4>Lista de Musicas</h4>
                     <p>Clique no ícone abaixo</p>
                     <a href="https://github.com/Maike2961/Angular_MusicsList" target="_blank"
                         rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
@@ -260,7 +258,7 @@
 
     <footer class="footer">
         <div class="footer-text">
-            <p> Copyright &copy; 2024 by maykisilva | All right Reserved</p>
+            <p> Made by Mayki Silva</p>
         </div>
         <div class="footer-iconTop">
             <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
