feat: add novo projeto

--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
 
             <div class="portfolio-box">
                 <video autoplay muted loop>
-                    <source src="./assests/videos/20240730103624.mp4">
+                    <source src="./assests/videos/22-05-09.mp4">
                 </video>
                 <div class="portfolio-layer">
-                    <h4>Coffe Dev</h4>
+                    <h4>Lista de Tarefas</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://coffedev-up.netlify.app/" target="_blank" rel="noopener noreferrer"><i
+                    <a href="https://github.com/Maike2961/Angular_ToDo" target="_blank" rel="noopener noreferrer"><i
                             class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
