refactor: add new box project

--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
 
             <div class="portfolio-box">
                 <video autoplay muted loop>
-                    <source src="./assests/videos/20240924151150.mp4">
+                    <source src="./assests/videos/21-12-02.mp4">
                 </video>
 
                 <div class="portfolio-layer">
-                    <h4>Lista de Musicas</h4>
+                    <h4>Encurtador de URL</h4>
                     <p>Clique no ícone abaixo</p>
-                    <a href="https://github.com/Maike2961/Angular_MusicsList" target="_blank"
+                    <a href="https://github.com/Maike2961/Url_Shortener" target="_blank"
                         rel="noopener noreferrer"><i class="fa-regular fa-share-from-square"></i></a>
                 </div>
             </div>
