feat: add button mode theme

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -44,7 +44,7 @@
                 CV</a>
         </div>
         <div class="home-img">
-            <img src="./assests/pictures/selfie.jpg" alt="whoiam">
+            <img src="./assests/pictures/zap.jpg" alt="whoiam">
     </section>
 
     <section class="about" id="about">
@@ -258,6 +258,10 @@
         </div>
         </div>
     </footer>
+
+    <a href="#" class="btn-change">
+        <img src="assests/icons/sun.svg" alt="backgroud"/>
+    </a>
 
     <script src="https://unpkg.com/scrollreveal"></script>
 
